kubernetes/apps/default/immich/app/postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-postgresql
    spec:
      containers:
        - name: postgresql
          image: tensorchord/pgvecto-rs:pg16-v0.3.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
spec:
  selector:
    app: immich-postgresql
  ports:
    - port: 5432
      targetPort: 5432
