kubernetes/apps/default/immich/app/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
spec:
  selector:
    app: immich-redis
  ports:
    - port: 6379
      targetPort: 6379
