kubernetes/apps/default/immich/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  hostnames:
    - photos.gurzil.org
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
